# swarm-website-visualization

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.py  gen_input_consts.py  input_consts_config.txt  test_resource.txt  testserver.py  testsite.html  wasmtest.py
resources/images/: robot_tex.pbm  tex_atlas.pbm
resources/scripts/: LOG_Narwhal_1_12_2020_____12_55_43.alog.script  test_script.script
resources/shaders/: texture_frag.glsl  texture_vert.glsl
shaders/: basic_frag.glsl  basic_vert.glsl  texture_frag.glsl  texture_vert.glsl
src/: lib.rs  redeclare.rs  script.rs  test_util.rs
src/gfx/: buffer.rs  camera.rs  gl_object.rs  manager.rs  mesh.rs  mod.rs  render_loop.rs  texture.rs  transform.rs  vertex_array.rs
src/gfx/gl_object/: buffer.rs  buffer_.rs  manager.rs  mod.rs  shader_program.rs  texture.rs  traits.rs  uniform_buffer.rs  vertex_array.rs
src/gfx/gl_object/shader/: shaderprogram.rs  uniform_buffer.rs
src/gfx/gl_object/shader/shadersrc/: mod.rs
src/gfx/renderer/: mod.rs  renderer.rs  renderer2d.rs  vertex.rs
src/gfx/shader/: mod.rs  shaderprogram.rs  uniform_buffer.rs
src/gfx/shader/shadersrc/: basic_frag.rs  basic_vert.rs  mod.rs
src/input/: input_consts.rs  listener.rs  mod.rs  states.rs
src/math/: transform.rs
src/resource/: async_loader.rs  loader.rs  manager.rs  mod.rs
