[package]
name = "swarm-website-visualization"
version = "0.1.0"
authors = ["YCP Swarm Robotics Team"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# Logs panic messages in javascript console.
# However it significantly increases the compiled program
# so it shouldn't be included for release versions
console_error_panic_hook = { version = "0.1.6", optional = true }

# WASM allocator to produce smaller applications
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Optimize release for size
opt-level = "s"