[package]
name = "swarm-website-visualization"
version = "0.1.0"
authors = ["YCP Swarm Robotics Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# Logs panic messages in javascript console.
# However it significantly increases the compiled program
# so it shouldn't be included for release versions
console_error_panic_hook = { version = "0.1.6", optional = true }

# WASM allocator to produce smaller applications
wee_alloc = { version = "0.4.5", optional = true }

gen-vec = "0.3.0"
paste = "1.0.0"
cgmath = "0.17"
js-sys = "0.3"
twox-hash = "1.5.0"
memoffset = "0.5"
tobj = "2.0"
float-cmp = "0.8.0"

[dependencies.web-sys]
version = "0.3"
features = [
    # Generic JS stuff
    'Document',
    'Element',
    'Window',
    'HtmlCanvasElement',
    'Event',
    'KeyboardEvent',
    'MouseEvent',
    'WheelEvent',
    'Performance',
    'FocusEvent',
    'XmlHttpRequest',
    'XmlHttpRequestResponseType',
    'ProgressEvent',

    # WebGL stuff
    'WebGl2RenderingContext',
    "WebGlContextEvent",

    'WebGlVertexArrayObject',
    'WebGlBuffer',

    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'WebGlTexture',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
wasm-bindgen-futures = "0.4.18"

[profile.release]
lto=true